--- a/assignment1/hw1.ipynb
+++ b/assignment1/hw1.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Note**: I adapted the codes to make them compatible with python 3. All codes were run in python 3 (rather than the officially supported version of python, i.e., python 2). As a result, I got slightly different results with solution for some questions, but all of my results passed the sanity check. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Q1: Softmax"
    ]
   },
@@ -43,6 +50,7 @@
    ],
    "source": [
     "%%bash\n",
+    "source activate py36\n",
     "python q1_softmax.py"
    ]
   },
@@ -122,6 +130,7 @@
    ],
    "source": [
     "%%bash\n",
+    "source activate py36\n",
     "python q2_sigmoid.py"
    ]
   },
@@ -151,6 +160,7 @@
    ],
    "source": [
     "%%bash\n",
+    "source activate py36\n",
     "python q2_gradcheck.py"
    ]
   },
@@ -177,6 +187,7 @@
    ],
    "source": [
     "%%bash\n",
+    "source activate py36\n",
     "python q2_neural.py"
    ]
   },
@@ -320,6 +331,7 @@
    ],
    "source": [
     "%%bash\n",
+    "source activate py36\n",
     "python q3_word2vec.py"
    ]
   },
@@ -379,6 +391,7 @@
    ],
    "source": [
     "%%bash\n",
+    "source activate py36\n",
     "python q3_sgd.py"
    ]
   },
@@ -390,24 +403,324 @@
     "\n",
     "![](q3_word_vectors.png)\n",
     "\n",
-    "**Note**: My result here is different from that in solution, presumably because I used python 3 rather than the officially supported version of python (python 2), and I adapted some codes to make it compatible with python 3. The final loss is 9.8122, which passed the sanity check.\n",
+    "**Note**: My result here is different from that in solution, presumably because I used python 3 rather than the officially supported version of python (python 2), and I adapted some codes to make it compatible with python 3. The final loss is 9.4384, which passed the sanity check.\n",
     "\n",
     "**Explanation**: Words of similar meanings are \"clustered\" together. Some punctuations and frequent words are isolated from word clusters."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Q4: Sentiment Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4a**.\n",
+    "```python\n",
+    "def getSentenceFeatures(tokens, wordVectors, sentence):\n",
+    "    \"\"\"\n",
+    "    Obtain the sentence feature for sentiment analysis by averaging its\n",
+    "    word vectors\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Implement computation for the sentence features given a sentence.\n",
+    "\n",
+    "    # Inputs:\n",
+    "    # tokens -- a dictionary that maps words to their indices in\n",
+    "    #           the word vector list\n",
+    "    # wordVectors -- word vectors (each row) for all tokens\n",
+    "    # sentence -- a list of words in the sentence of interest\n",
+    "\n",
+    "    # Output:\n",
+    "    # - sentVector: feature vector for the sentence\n",
+    "\n",
+    "    sentVector = np.zeros((wordVectors.shape[1],))\n",
+    "\n",
+    "    ### YOUR CODE HERE\n",
+    "    sentVector = np.mean([wordVectors[tokens[w]] for w in sentence], axis=0)\n",
+    "    ### END YOUR CODE\n",
+    "\n",
+    "    assert sentVector.shape == (wordVectors.shape[1],)\n",
+    "    return sentVector\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4b**. We want to use regularization to prevent overfitting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4c**.\n",
+    "```python\n",
+    "def getRegularizationValues():\n",
+    "    \"\"\"Try different regularizations\n",
+    "\n",
+    "    Return a sorted list of values to try.\n",
+    "    \"\"\"\n",
+    "    # values = None   # Assign a list of floats in the block below\n",
+    "    ### YOUR CODE HERE\n",
+    "    values = [10 ** p for p in range(-6, 4)]\n",
+    "    ### END YOUR CODE\n",
+    "    return sorted(values)\n",
+    "\n",
+    "\n",
+    "def chooseBestModel(results):\n",
+    "    \"\"\"Choose the best model based on dev set performance.\n",
+    "\n",
+    "    Arguments:\n",
+    "    results -- A list of python dictionaries of the following format:\n",
+    "        {\n",
+    "            \"reg\": regularization,\n",
+    "            \"clf\": classifier,\n",
+    "            \"train\": trainAccuracy,\n",
+    "            \"dev\": devAccuracy,\n",
+    "            \"test\": testAccuracy\n",
+    "        }\n",
+    "\n",
+    "    Each dictionary represents the performance of one model.\n",
+    "\n",
+    "    Returns:\n",
+    "    Your chosen result dictionary.\n",
+    "    \"\"\"\n",
+    "    bestResult = None\n",
+    "\n",
+    "    ### YOUR CODE HERE\n",
+    "    bestResult = max(results, key=lambda m:m['dev'])\n",
+    "    ### END YOUR CODE\n",
+    "\n",
+    "    return bestResult\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4d**. First, we need to fix the encoding bug in datasetSentences.txt."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%bash\n",
+    "source activate py27\n",
+    "cd utils\n",
+    "python fix_encoding.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After this, I manually fix the encoding bug in dictionary.txt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training for reg=0.000001\n",
+      "Train accuracy (%): 30.138109\n",
+      "Dev accuracy (%): 29.700272\n",
+      "Test accuracy (%): 29.230769\n",
+      "Training for reg=0.000010\n",
+      "Train accuracy (%): 30.102996\n",
+      "Dev accuracy (%): 29.609446\n",
+      "Test accuracy (%): 29.185520\n",
+      "Training for reg=0.000100\n",
+      "Train accuracy (%): 30.056180\n",
+      "Dev accuracy (%): 29.700272\n",
+      "Test accuracy (%): 29.185520\n",
+      "Training for reg=0.001000\n",
+      "Train accuracy (%): 30.044476\n",
+      "Dev accuracy (%): 29.972752\n",
+      "Test accuracy (%): 29.185520\n",
+      "Training for reg=0.010000\n",
+      "Train accuracy (%): 29.985955\n",
+      "Dev accuracy (%): 30.426885\n",
+      "Test accuracy (%): 28.959276\n",
+      "Training for reg=0.100000\n",
+      "Train accuracy (%): 29.552903\n",
+      "Dev accuracy (%): 30.063579\n",
+      "Test accuracy (%): 28.597285\n",
+      "Training for reg=1.000000\n",
+      "Train accuracy (%): 28.300562\n",
+      "Dev accuracy (%): 26.521344\n",
+      "Test accuracy (%): 26.108597\n",
+      "Training for reg=10.000000\n",
+      "Train accuracy (%): 27.212079\n",
+      "Dev accuracy (%): 25.522252\n",
+      "Test accuracy (%): 23.076923\n",
+      "Training for reg=100.000000\n",
+      "Train accuracy (%): 27.247191\n",
+      "Dev accuracy (%): 25.522252\n",
+      "Test accuracy (%): 23.031674\n",
+      "Training for reg=1000.000000\n",
+      "Train accuracy (%): 27.247191\n",
+      "Dev accuracy (%): 25.522252\n",
+      "Test accuracy (%): 23.031674\n",
+      "\n",
+      "=== Recap ===\n",
+      "Reg\t\tTrain\tDev\tTest\n",
+      "1.00E-06\t30.138\t29.700\t29.231\n",
+      "1.00E-05\t30.103\t29.609\t29.186\n",
+      "1.00E-04\t30.056\t29.700\t29.186\n",
+      "1.00E-03\t30.044\t29.973\t29.186\n",
+      "1.00E-02\t29.986\t30.427\t28.959\n",
+      "1.00E-01\t29.553\t30.064\t28.597\n",
+      "1.00E+00\t28.301\t26.521\t26.109\n",
+      "1.00E+01\t27.212\t25.522\t23.077\n",
+      "1.00E+02\t27.247\t25.522\t23.032\n",
+      "1.00E+03\t27.247\t25.522\t23.032\n",
+      "\n",
+      "Best regularization value: 1.00E-02\n",
+      "Test accuracy (%): 28.959276\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "source activate py36\n",
+    "python q4_sentiment.py --yourvectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training for reg=0.000001\n",
+      "Train accuracy (%): 39.899345\n",
+      "Dev accuracy (%): 36.512262\n",
+      "Test accuracy (%): 37.013575\n",
+      "Training for reg=0.000010\n",
+      "Train accuracy (%): 39.969569\n",
+      "Dev accuracy (%): 36.512262\n",
+      "Test accuracy (%): 36.968326\n",
+      "Training for reg=0.000100\n",
+      "Train accuracy (%): 39.946161\n",
+      "Dev accuracy (%): 36.421435\n",
+      "Test accuracy (%): 36.968326\n",
+      "Training for reg=0.001000\n",
+      "Train accuracy (%): 39.899345\n",
+      "Dev accuracy (%): 36.512262\n",
+      "Test accuracy (%): 37.104072\n",
+      "Training for reg=0.010000\n",
+      "Train accuracy (%): 39.957865\n",
+      "Dev accuracy (%): 36.239782\n",
+      "Test accuracy (%): 37.194570\n",
+      "Training for reg=0.100000\n",
+      "Train accuracy (%): 39.782303\n",
+      "Dev accuracy (%): 36.239782\n",
+      "Test accuracy (%): 37.149321\n",
+      "Training for reg=1.000000\n",
+      "Train accuracy (%): 39.513109\n",
+      "Dev accuracy (%): 36.512262\n",
+      "Test accuracy (%): 37.420814\n",
+      "Training for reg=10.000000\n",
+      "Train accuracy (%): 38.611891\n",
+      "Dev accuracy (%): 36.875568\n",
+      "Test accuracy (%): 37.692308\n",
+      "Training for reg=100.000000\n",
+      "Train accuracy (%): 36.317884\n",
+      "Dev accuracy (%): 35.059037\n",
+      "Test accuracy (%): 35.701357\n",
+      "Training for reg=1000.000000\n",
+      "Train accuracy (%): 32.151217\n",
+      "Dev accuracy (%): 31.244323\n",
+      "Test accuracy (%): 30.588235\n",
+      "\n",
+      "=== Recap ===\n",
+      "Reg\t\tTrain\tDev\tTest\n",
+      "1.00E-06\t39.899\t36.512\t37.014\n",
+      "1.00E-05\t39.970\t36.512\t36.968\n",
+      "1.00E-04\t39.946\t36.421\t36.968\n",
+      "1.00E-03\t39.899\t36.512\t37.104\n",
+      "1.00E-02\t39.958\t36.240\t37.195\n",
+      "1.00E-01\t39.782\t36.240\t37.149\n",
+      "1.00E+00\t39.513\t36.512\t37.421\n",
+      "1.00E+01\t38.612\t36.876\t37.692\n",
+      "1.00E+02\t36.318\t35.059\t35.701\n",
+      "1.00E+03\t32.151\t31.244\t30.588\n",
+      "\n",
+      "Best regularization value: 1.00E+01\n",
+      "Test accuracy (%): 37.692308\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "source activate py36\n",
+    "python q4_sentiment.py --pretrained"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Reasons**:\n",
+    "1. In this case, the dimension of GloVe vectors is higher than that of our word2vec vectors. More information could be encoded by higher dimensional word vectors.\n",
+    "2. GloVe vectors used here were trained on a much larger corpus.\n",
+    "3. GloVe has more efficient usage of global statistics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4e**.\n",
+    "\n",
+    "![](q4_reg_v_acc.png)\n",
+    "\n",
+    "Training accuracy decreases as regularization increases, while there is a peak for validation accuracy and validation accuracy decreases as regularization parameter deviates from the optimum."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4f**.\n",
+    "\n",
+    "![](q4_dev_conf.png)\n",
+    "\n",
+    "The sentiment for most samples is predicted correctly, although there are some mistakes. There are not many extreme predictions (i.e., very negative or very positive)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4g**. Example 1: true: 3; predicted: 1; text: but taken as a stylish and energetic one-shot , the queen of the damned can not be said to suck .  \n",
+    "Explanation: the model was unable to handle negation.\n",
+    "\n",
+    "Example 2: true: 1; predicted: 3; text: too much of the humor falls flat .  \n",
+    "Explanation: the model was unable to handle negation.\n",
+    "\n",
+    "Example 3: true: 1; predicted: 3; text:plays like a volatile and overlong w magazine fashion spread .\n",
+    "Explanation: the model fails to capture word order and context."
+   ]
   }
  ],
  "metadata": {
