--- a/assignment1/hw1.ipynb
+++ b/assignment1/hw1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note**: I adapted the codes to make them compatible with python 3. All codes were run in python 3 (rather than the officially supported version of python, i.e., python 2). As a result, I got slightly different results with solution for some questions, but all of my results passed the sanity check. "
+    "**Note**: I adapted the starter codes to make them compatible with python 3. All codes were run in python 3 (rather than the officially supported version of python, i.e., python 2) unless clarified. As a result, I got slightly different results with solution for some questions, but all of my results passed the sanity check. "
    ]
   },
   {
