try fixing hw1 equation

--- a/assignment1/hw1.ipynb
+++ b/assignment1/hw1.ipynb
@@ -213,26 +213,12 @@
    "metadata": {},
    "source": [
     "**3b**. \n",
-    "\\begin{equation}\\frac{\\partial J}{\\partial U} = v_c(\\hat{y}-y)^\\text{T}\\end{equation}\n",
-    "Equivalently,\n",
-    "\\begin{equation}\\frac{\\partial J}{\\partial u_k} = \\left\\{\n",
-    "\\begin{array}{}\n",
-    "     (\\hat{y}_k-1)v_c, & k=o\\\\\n",
-    "     \\hat{y}_kv_c, & k \\neq o\n",
-    "\\end{array}\\right.\\end{equation}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**3b**. \n",
     "$$\\frac{\\partial J}{\\partial U} = v_c(\\hat{y}-y)^\\text{T}$$\n",
     "Equivalently,\n",
     "$$\\frac{\\partial J}{\\partial u_k} = \\left\\{\n",
     "\\begin{array}{}\n",
     "     (\\hat{y}_k-1)v_c, & k=o\\\\\n",
-    "     \\hat{y}_kv_c, & k \\neq o\n",
+    "     \\hat{y}_kv_c, & k \\neq o\\\\\n",
     "\\end{array}\\right.$$"
    ]
   },
