try fixing hw1 equation

--- a/assignment1/hw1.ipynb
+++ b/assignment1/hw1.ipynb
@@ -215,11 +215,11 @@
     "**3b**. \n",
     "$$\\frac{\\partial J}{\\partial U} = v_c(\\hat{y}-y)^\\text{T}$$\n",
     "Equivalently,\n",
-    "$$\\frac{\\partial J}{\\partial u_k} = \\left\\{\n",
-    "\\begin{array}{}\n",
+    "$$\\frac{\\partial J}{\\partial u_k} = \n",
+    "\\begin{cases}\n",
     "     (\\hat{y}_k-1)v_c, & k=o\\\\\n",
-    "     \\hat{y}_kv_c, & k \\neq o\\\\\n",
-    "\\end{array}\\right.$$"
+    "     \\hat{y}_kv_c, & k \\neq o\n",
+    "\\end{cases}$$"
    ]
   },
   {
