try fixing hw1 equation

--- a/assignment1/hw1.ipynb
+++ b/assignment1/hw1.ipynb
@@ -230,12 +230,12 @@
     "$$\\frac{\\partial J}{\\partial v_c}=\n",
     "-(1-\\sigma(u_o^\\text{T}v_c))u_o+\\sum_{k=1}^K(1-\\sigma(-u_k^\\text{T}v_c))u_k$$\n",
     "\n",
-    "$$\\frac{\\partial J}{\\partial u_w}= \\left\\{\n",
-    "\\begin{array}{}\n",
+    "$$\\frac{\\partial J}{\\partial u_w}= \n",
+    "\\begin{cases}\n",
     "-(1-\\sigma(u_w^\\text{T}v_c))v_c, & w=o\\\\\n",
     "(1-\\sigma(-u_w^\\text{T}v_c))v_c, & w=1, 2, ..., K\\\\\n",
     "0, & \\text{otherwise}\n",
-    "\\end{array}\\right.$$\n",
+    "\\end{cases}$$\n",
     "\n",
     "There are less terms using negative sampling loss compared to the softmax-CE loss; the speed-up ratio is $O(V/K)$."
    ]
