--- a/assignment1/hw1.ipynb
+++ b/assignment1/hw1.ipynb
@@ -247,16 +247,16 @@
     "**3d**.\n",
     "$$\\frac{\\partial J_{skip-gram}(w_{t-m...t+m})}{\\partial U}=\\sum_{-m\\le j \\le m, j\\neq 0}\\frac{\\partial F(w_{t+j}, v_c)}{\\partial U}$$\n",
     "\n",
-    "$$\\frac{\\partial J_{skip-gram}(w_{t-m...t+m})}{\\partial v_k}= \\left\\{\n",
-    "\\begin{array}{}\n",
+    "$$\\frac{\\partial J_{skip-gram}(w_{t-m...t+m})}{\\partial v_k}= \n",
+    "\\begin{cases}\n",
     "\\sum_{-m\\le j \\le m, j \\neq 0}\\frac{\\partial F(w_{t+j},v_c)}{\\partial v_k}, & k = c\\\\\n",
     "0,&k \\neq c\n",
-    "\\end{array}\\right.$$\n",
+    "\\end{cases}$$\n",
     "\n",
     "$$\\frac{\\partial J_{CBOW}(w_{c-m...c+m})}{\\partial U}=\\frac{\\partial F(w_t, \\hat{v})}{\\partial U}$$\n",
     "\n",
     "$$\\frac{\\partial J_{CBOW}(w_{c-m...c+m})}{\\partial v_k}=\\left\\{\n",
-    "\\begin{array}{}\n",
+    "\\begin{array}\n",
     "\\frac{\\partial F(w_t, \\hat{v})}{\\partial v_k}, & k=w_{t+j}, j \\in \\{-m, ...,-1, +1, ..., +m\\}\\\\\n",
     "0, & k \\neq w_{t+j}, j \\in \\{-m, ...,-1, +1, ..., +m\\}\\\\\n",
     "\\end{array}\\right.$$"
