--- a/assignment1/hw1.ipynb
+++ b/assignment1/hw1.ipynb
@@ -255,11 +255,11 @@
     "\n",
     "$$\\frac{\\partial J_{CBOW}(w_{c-m...c+m})}{\\partial U}=\\frac{\\partial F(w_t, \\hat{v})}{\\partial U}$$\n",
     "\n",
-    "$$\\frac{\\partial J_{CBOW}(w_{c-m...c+m})}{\\partial v_k}=\\left\\{\n",
-    "\\begin{array}\n",
+    "$$\\frac{\\partial J_{CBOW}(w_{c-m...c+m})}{\\partial v_k}=\n",
+    "\\begin{cases}\n",
     "\\frac{\\partial F(w_t, \\hat{v})}{\\partial v_k}, & k=w_{t+j}, j \\in \\{-m, ...,-1, +1, ..., +m\\}\\\\\n",
     "0, & k \\neq w_{t+j}, j \\in \\{-m, ...,-1, +1, ..., +m\\}\\\\\n",
-    "\\end{array}\\right.$$"
+    "\\end{cases}$$"
    ]
   },
   {
