try fixing hw1 equations

--- a/assignment1/hw1.ipynb
+++ b/assignment1/hw1.ipynb
@@ -251,8 +251,13 @@
     "\\begin{cases}\n",
     "\\sum_{-m\\le j \\le m, j \\neq 0}\\frac{\\partial F(w_{t+j},v_c)}{\\partial v_k}, & k = c\\\\\n",
     "0,&k \\neq c\n",
-    "\\end{cases}$$\n",
-    "\n",
+    "\\end{cases}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\\frac{\\partial J_{CBOW}(w_{c-m...c+m})}{\\partial U}=\\frac{\\partial F(w_t, \\hat{v})}{\\partial U}$$\n",
     "\n",
     "$$\\frac{\\partial J_{CBOW}(w_{c-m...c+m})}{\\partial v_k}=\n",
