--- a/assignment1/hw1.ipynb
+++ b/assignment1/hw1.ipynb
@@ -263,7 +263,7 @@
     "$$\\frac{\\partial J_{CBOW}(w_{c-m...c+m})}{\\partial v_k}=\n",
     "\\begin{cases}\n",
     "\\frac{\\partial F(w_t, \\hat{v})}{\\partial v_k}, & k=w_{t+j}, j \\in \\{-m, ...,-1, +1, ..., +m\\}\\\\\n",
-    "0, & k \\neq w_{t+j}, j \\in \\{-m, ...,-1, +1, ..., +m\\}\\\\\n",
+    "0, & k \\neq w_{t+j}, j \\in \\{-m, ...,-1, +1, ..., +m\\}\n",
     "\\end{cases}$$"
    ]
   },
