--- a/assignment2/hw2.ipynb
+++ b/assignment2/hw2.ipynb
@@ -129,11 +129,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "During forward propagation, the loss gets computed; during backpropagation, the derivatives with respect to the variables in the graph get computed; after the op has been run, the variables in the graph will be updated."
+   ]
   },
   {
    "cell_type": "code",
