--- a/assignment2/hw2.ipynb
+++ b/assignment2/hw2.ipynb
@@ -136,6 +136,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q2: Neural Transition-Based Dependency Parsing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2a**.\n",
+    "\n",
+    "stack| buffer | new dependency | transition\n",
+    "--- | --- | ---| ---\n",
+    "[ROOT] | [I, parsed, this, sentence, correctly] | | Initial Configuration\n",
+    "[ROOT, I] | [parsed, this, sentence, correctly] | | SHIFT\n",
+    "[ROOT, I, parsed] | [this, sentence, correctly] | | SHIFT\n",
+    "[ROOT, parsed] | [this, sentence, correctly] | parsed → I | LEFT-ARC\n",
+    "[ROOT, parsed, this] | [sentence, correctly] | | SHIFT\n",
+    "[ROOT, parsed, this, sentence] | [correctly] | | SHIFT\n",
+    "[ROOT, parsed, sentence] | [correctly] | sentence → this | LEFT-ARC\n",
+    "[ROOT, parsed] | [correctly] | parsed → sentence | RIGHT-ARC\n",
+    "[ROOT, parsed, correctly] | [] | | SHIFT\n",
+    "[ROOT, parsed] | [] | parsed → correctly | RIGHT-ARC\n",
+    "[ROOT] | [] | ROOT → parsed | RIGHT-ARC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2b**. A sentence containing $n$ words will be parsed in $2n$ steps; each word must be shifted onto the stack and moved away through LEFT-ARC or RIGHT-ARC."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2c** and **2d**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SHIFT test passed!\n",
+      "LEFT-ARC test passed!\n",
+      "RIGHT-ARC test passed!\n",
+      "parse test passed!\n",
+      "minibatch_parse test passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "python q2_parser_transitions.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
