--- a/assignment2/hw2.ipynb
+++ b/assignment2/hw2.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -196,36 +196,58 @@
    ],
    "source": [
     "%%bash\n",
+    "source activate py36\n",
     "python q2_parser_transitions.py"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**2e**."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running basic tests...\n",
+      "Basic (non-exhaustive) Xavier initialization tests pass\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "source activate py36\n",
+    "python q2_initialization.py"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**2f**.\n",
+    "\n",
+    "$$\\gamma = \\frac{1}{1 - p_{drop}}$$\n",
+    "\n",
+    "$$\\mathbb{E}_{p_{drop}}[h_{drop}]_i = \\mathbb{E}_{p_{drop}}[\\gamma d_i h_i] = p_{drop}\\cdot 0 + (1-p_{drop})\\cdot \\gamma h_i = (1-p_{drop})\\cdot \\gamma h_i = h_i$$\n",
+    "\n",
+    "$$\\therefore \\gamma = \\frac{1}{1 - p_{drop}}$$"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**2g**. **(i)** Each update depends on the previous update since the previous $m$ would be multiplied by $\\beta_1$ and the current gradient would be multiplied by $(1 - \\beta_1)$. The rolling average is close to calculating the gradient over a larger minibatch, the variance of each update would be reduced, and each update would be closer to the gradient over the whole dataset.\n",
+    "\n",
+    "**(ii)** The parameters with the smaller gradients (on average) will get larger updates; this would help parameters move out of the flat areas (saddle points)."
+   ]
   },
   {
    "cell_type": "code",
